--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
       url: jdbc:mysql://127.0.0.1:3306/vueblog?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8&allowMultiQueries=true
       username: root
       password: root
+  thymeleaf:
+    cache: false  # 禁用模板引擎缓存
+  messages:
+    basename: i18n/login
 
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
